--- a/css/estilo5.css
+++ b/css/estilo5.css
@@ -3,6 +3,11 @@ body{
     font-size: 16px;
     padding-left: 6em;
     padding-right: 6em;
+
+    background-image: url("../img/header5/hero.png");
+    background-repeat: no-repeat;
+    background-size: 60%;
+    background-position: right top;
 }
 header{
     display: flex;
@@ -55,11 +60,16 @@ span{
 }
 
 .tick::before{
-    content: url(../img/header5/tickamarillo.svg);
-    
+    content: "";
+    display: inline-block;
+    width: 20%;
+    height: 100%;
+    background-image: url("../img/header5/tickamarillo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-section:nth-child(2){
+.special__tick{
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
@@ -68,4 +78,17 @@ section:nth-child(2){
 
 .principal__info{
     width: 50%;
+}
+
+.down__info{
+    display: flex;
+    width: 100%;
+    height: 80%;
+    margin-top: 80px;
+    background-color: white;
+}
+
+.hero__title{
+    font-size: 60px;
+    color: #403C39;
 }
