--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,7 @@
 header>nav>ul>li{
     list-style-type: none;
     text-decoration: none;
+    margin-top: 50px;
 }
 
 header>nav>ul>li>a{
@@ -24,5 +25,6 @@ h1{
 
 header>nav>ul{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
